# awesome-AI

./: LICENSE  README.md  pyproject.toml  requirements.txt
.tmp_debug_newscatcher/: newscatcher-0.2.0-py3-none-any.whl
LLM-TokenCounter/: exploreConcept.ipynb
NewsLensFact/: DailyNewsSummary.ipynb  LLMFactCheck.py  NewsSearch.py  README.md
NewsSummarizer/: LLMFactCheck.py  NewsTitleRead.py  README.md
QwikSummarizer/: QwikSummarizer.ipynb  README.md
RAG_Project/: README.md  main.py  pyproject.toml  requirements.txt
RAG_Project/data/processed_data/: superusers_counts_cleanedmanually.csv  topic_groups_1.csv  word_frequency_tagged.csv  word_frequency_tagged_10_10.csv
RAG_Project/data/vector_db/: chroma.sqlite3
RAG_Project/notebook/: CompleteRAGPipeline.ipynb  rough_notebook.ipynb
SkillTrend/: fetch_jobs.py  process_skills.py  requirements.txt  skill_extractor.py
SkillTrend/Ingestion/: adzuna_client.py  config.py  scraper.py  utils.py
SkillTrend/data/processed/: jobs.csv
SkillTrend/data/raw/: Director_of_engineering_combined_20260426_203607.json
SkillTrend/data/reports/: skill_analysis.json
ai_incident_analyzer/: README.md  __init__.py  app.py  incident_analyzer.py  integrations.py  preprocessing.py  rca_generator.ipynb
data/processed/: jobs.csv
data/raw/: Director_of_engineering_combined_20260426_221859.json
