[project]
name = "rag-project"
version = "0.1.0"
description = "End-to-end RAG pipeline with LangChain, ChromaDB, and hybrid retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-text-splitters>=0.3.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]
